      PR d/96140, PR fortran/95612, PR fortran/95585, PR fortran/89574,
      PR fortran/96018, PR fortran/96220, PR target/96402 (AArch64),
      PR fortran/93592, PR libstdc++/93245, PR libstdc++/94242,
      PR libstdc++/96484.
  * Apply patch for PR bootstrap/96203, add -fcf-protection=check, taken from
    the trunk.

 -- Matthias Klose <doko@debian.org>  Sat, 08 Aug 2020 13:14:38 +0200

gcc-9 (9.3.0-16) unstable; urgency=medium

  * Update to git 20200721 from the gcc-9 branch.
    - Fix PR target/94891 (AArch64), PR target/94791 (AArch64),
      PR target/96001 (AArch64).
    - Fix missing dependencies for selftests which occasionally causes
      failed builds. Addresses: #960913.
  * Build the GC enabled libobjc on arm64, mips and mipsel as well.

 -- Matthias Klose <doko@debian.org>  Tue, 21 Jul 2020 11:49:23 +0200

gcc-9 (9.3.0-15) unstable; urgency=medium

  * Update to git 20200713 from the gcc-9 branch.
    - Fix PR libstdc++/91807, PR libstdc++/94627, PR fortran/95709,
      PR fortran/93337, PR fortran/88379, PR fortran/71706, PR fortran/95880,
      PR fortran/95829, PR fortran/95743, PR fortran/95881, PR fortran/95689,
      PR fortran/95689, PR fortran/95587, PR fortran/95708, PR d/95250,
      PR d/95173, PR tree-optimization/95804, PR tree-optimization/95638,
      PR target/94954 (PPC), PR target/95874 (x86).
  * distro-defaults.h: Don't define for offload compilers.
  * Update the patch for PR lto/95604.

 -- Matthias Klose <doko@debian.org>  Mon, 13 Jul 2020 14:26:07 +0200

gcc-9 (9.3.0-14) unstable; urgency=medium

  * Update to git 20200617 from the gcc-9 branch.
    - Fix PR target/94833 (PPC), PR target/94591 (AArch64),
      PR gcov-profile/95332, PR target/94812 (AArch64), PR target/95258 (x86),
      PR tree-optimization/94969, PR c++/90212, PR c++/90479, PR c++/91529,
      PR c++/93822, PR fortran/95373, PR fortran/95373, PR fortran/95106,
      PR fortran/95530, PR fortran/95537, PR fortran/95500, PR fortran/94361,