@@ -33,7 +33,7 @@
  	"build_tooldir=$(build_tooldir)" \
  	"gcc_tooldir=$(gcc_tooldir)" \
  	"bindir=$(bindir)" \
-@@ -1722,6 +1723,14 @@ ifneq ($(xmake_file),)
+@@ -1726,6 +1727,14 @@ ifneq ($(xmake_file),)
  include $(xmake_file)
  endif
  
@@ -48,7 +48,7 @@
  # all-tree.def includes all the tree.def files.
  all-tree.def: s-alltree; @true
  s-alltree: Makefile
-@@ -2847,7 +2856,7 @@ PREPROCESSOR_DEFINES = \
+@@ -2849,7 +2858,7 @@ PREPROCESSOR_DEFINES = \
    -DFIXED_INCLUDE_DIR=\"$(libsubdir)/include-fixed\" \
    -DGPLUSPLUS_INCLUDE_DIR=\"$(gcc_gxx_include_dir)\" \
    -DGPLUSPLUS_INCLUDE_DIR_ADD_SYSROOT=$(gcc_gxx_include_dir_add_sysroot) \
