@@ -30,7 +30,7 @@ libgomp/
  /* Nonzero if cross-compiling.
     When -b is used, the value comes from the `specs' file.  */
  
-@@ -4680,7 +4684,10 @@ process_command (unsigned int decoded_op
+@@ -4702,7 +4706,10 @@ process_command (unsigned int decoded_op
    /* If the user didn't specify any, default to all configured offload
       targets.  */
    if (ENABLE_OFFLOADING && offload_targets == NULL)
@@ -42,7 +42,7 @@ libgomp/
  
    if (output_file
        && strcmp (output_file, "-") != 0
-@@ -7898,6 +7905,8 @@ driver::maybe_putenv_OFFLOAD_TARGETS ()
+@@ -7920,6 +7927,8 @@ driver::maybe_putenv_OFFLOAD_TARGETS ()
        obstack_grow (&collect_obstack, offload_targets,
  		    strlen (offload_targets) + 1);
        xputenv (XOBFINISH (&collect_obstack, char *));
