@@ -30,7 +30,7 @@
    then
      CROSS="-DCROSS_DIRECTORY_STRUCTURE"
      ALL=all.cross
-@@ -6450,14 +6450,14 @@ AC_SUBST_FILE(language_hooks)
+@@ -6455,14 +6455,14 @@ AC_SUBST_FILE(language_hooks)
  
  # Echo link setup.
  if test x${build} = x${host} ; then
