@@ -2,7 +2,7 @@
 
 --- a/src/gcc/Makefile.in
 +++ b/src/gcc/Makefile.in
-@@ -2473,31 +2473,8 @@ s-tm-texi: $(srcdir)/doc/../doc/tm.texi
+@@ -2475,31 +2475,8 @@ s-tm-texi: $(srcdir)/doc/../doc/tm.texi
  # \r is not portable to Solaris tr, therefore we have a special
  # case for ASCII.  We use \r for other encodings like EBCDIC.
  s-tm-texi: build/genhooks$(build_exeext) $(srcdir)/doc/tm.texi.in
