@@ -3,7 +3,7 @@
 
 --- a/src/gcc/gcc.c
 +++ b/src/gcc/gcc.c
-@@ -7216,6 +7216,16 @@ do_report_bug (const char **new_argv, co
+@@ -7238,6 +7238,16 @@ do_report_bug (const char **new_argv, co
  	  fflush(stderr);
  	  free(cmd);
  	}
