@@ -3,7 +3,7 @@
 
 --- a/src/gcc/gcc.c
 +++ b/src/gcc/gcc.c
-@@ -3404,7 +3404,8 @@ execute (void)
+@@ -3426,7 +3426,8 @@ execute (void)
  	    /* For ICEs in cc1, cc1obj, cc1plus see if it is
  	       reproducible or not.  */
  	    const char *p;
@@ -13,7 +13,7 @@
  		&& WEXITSTATUS (status) == ICE_EXIT_CODE
  		&& i == 0
  		&& (p = strrchr (commands[0].argv[0], DIR_SEPARATOR))
-@@ -7198,8 +7199,23 @@ do_report_bug (const char **new_argv, co
+@@ -7220,8 +7221,23 @@ do_report_bug (const char **new_argv, co
  
    if (status == ATTEMPT_STATUS_SUCCESS)
      {
