@@ -2,7 +2,7 @@
 
 --- a/src/gcc/gcc.c
 +++ b/src/gcc/gcc.c
-@@ -2686,6 +2686,7 @@ for_each_path (const struct path_prefix
+@@ -2708,6 +2708,7 @@ for_each_path (const struct path_prefix
  	{
  	  len = paths->max_len + extra_space + 1;
  	  len += MAX (MAX (suffix_len, multi_os_dir_len), multiarch_len);
@@ -10,7 +10,7 @@
  	  path = XNEWVEC (char, len);
  	}
  
-@@ -2899,6 +2900,24 @@ file_at_path (char *path, void *data)
+@@ -2921,6 +2922,24 @@ file_at_path (char *path, void *data)
    struct file_at_path_info *info = (struct file_at_path_info *) data;
    size_t len = strlen (path);
  
