@@ -15,7 +15,7 @@
    open_quote = _("`");
 --- a/src/gcc/Makefile.in
 +++ b/src/gcc/Makefile.in
-@@ -4200,8 +4200,8 @@ install-po:
+@@ -4202,8 +4202,8 @@ install-po:
  	  dir=$(localedir)/$$lang/LC_MESSAGES; \
  	  echo $(mkinstalldirs) $(DESTDIR)$$dir; \
  	  $(mkinstalldirs) $(DESTDIR)$$dir || exit 1; \
