@@ -1,5 +1,3 @@
-Index: b/src/configure.ac
-===================================================================
 --- a/src/configure.ac
 +++ b/src/configure.ac
 @@ -111,11 +111,11 @@ extra_host_args=
@@ -247,8 +245,6 @@ Index: b/src/configure.ac
  MAINT=$MAINTAINER_MODE_TRUE
  AC_SUBST(MAINT)dnl
  
-Index: b/src/gcc/c/gccspec.c
-===================================================================
 --- a/src/gcc/c/gccspec.c
 +++ b/src/gcc/c/gccspec.c
 @@ -105,3 +105,9 @@ lang_specific_pre_link (void)
@@ -261,8 +257,6 @@ Index: b/src/gcc/c/gccspec.c
 +lang_register_spec_functions (void)
 +{
 +}
-Index: b/src/gcc/c-family/cppspec.c
-===================================================================
 --- a/src/gcc/c-family/cppspec.c
 +++ b/src/gcc/c-family/cppspec.c
 @@ -198,3 +198,9 @@ int lang_specific_pre_link (void)
@@ -275,8 +269,6 @@ Index: b/src/gcc/c-family/cppspec.c
 +lang_register_spec_functions (void)
 +{
 +}
-Index: b/src/gcc/cp/g++spec.c
-===================================================================
 --- a/src/gcc/cp/g++spec.c
 +++ b/src/gcc/cp/g++spec.c
 @@ -403,3 +403,9 @@ int lang_specific_pre_link (void)  /* No
@@ -289,8 +281,6 @@ Index: b/src/gcc/cp/g++spec.c
 +lang_register_spec_functions (void)
 +{
 +}
-Index: b/src/gcc/gcc.c
-===================================================================
 --- a/src/gcc/gcc.c
 +++ b/src/gcc/gcc.c
 @@ -314,6 +314,10 @@ static const char *cross_compile = "1";
@@ -312,7 +302,7 @@ Index: b/src/gcc/gcc.c
  
  /* The Specs Language
  
-@@ -1104,6 +1109,7 @@ proper position among the other output f
+@@ -1125,6 +1130,7 @@ proper position among the other output f
  /* We pass any -flto flags on to the linker, which is expected
     to understand them.  In practice, this means it had better be collect2.  */
  /* %{e*} includes -export-dynamic; see comment in common.opt.  */
@@ -320,7 +310,7 @@ Index: b/src/gcc/gcc.c
  #ifndef LINK_COMMAND_SPEC
  #define LINK_COMMAND_SPEC "\
  %{!fsyntax-only:%{!c:%{!M:%{!MM:%{!E:%{!S:\
-@@ -1729,6 +1735,10 @@ static const struct spec_function static
+@@ -1751,6 +1757,10 @@ static const struct spec_function static
    { 0, 0 }
  };
  
@@ -331,7 +321,7 @@ Index: b/src/gcc/gcc.c
  static int processing_spec_function;
  
  /* Add appropriate libgcc specs to OBSTACK, taking into account
-@@ -3818,6 +3828,81 @@ set_source_date_epoch_envvar ()
+@@ -3840,6 +3850,81 @@ set_source_date_epoch_envvar ()
    setenv ("SOURCE_DATE_EPOCH", source_date_epoch, 0);
  }
  
@@ -413,7 +403,7 @@ Index: b/src/gcc/gcc.c
  /* Handle an option DECODED that is unknown to the option-processing
     machinery.  */
  
-@@ -4297,33 +4382,7 @@ driver_handle_option (struct gcc_options
+@@ -4319,33 +4404,7 @@ driver_handle_option (struct gcc_options
        break;
  
      case OPT_B:
@@ -448,7 +438,7 @@ Index: b/src/gcc/gcc.c
        validated = true;
        break;
  
-@@ -6089,7 +6148,7 @@ do_spec_1 (const char *spec, int inswitc
+@@ -6111,7 +6170,7 @@ do_spec_1 (const char *spec, int inswitc
  		     "%{foo=*:bar%*}%{foo=*:one%*two}"
  
  		   matches -foo=hello then it will produce:
@@ -457,7 +447,7 @@ Index: b/src/gcc/gcc.c
  		     barhello onehellotwo
  		*/
  		if (*p == 0 || *p == '}')
-@@ -6166,6 +6225,33 @@ do_spec_1 (const char *spec, int inswitc
+@@ -6188,6 +6247,33 @@ do_spec_1 (const char *spec, int inswitc
    return 0;
  }
  
@@ -491,7 +481,7 @@ Index: b/src/gcc/gcc.c
  /* Look up a spec function.  */
  
  static const struct spec_function *
-@@ -6177,6 +6263,11 @@ lookup_spec_function (const char *name)
+@@ -6199,6 +6285,11 @@ lookup_spec_function (const char *name)
      if (strcmp (sf->name, name) == 0)
        return sf;
  
@@ -503,7 +493,7 @@ Index: b/src/gcc/gcc.c
    return NULL;
  }
  
-@@ -7659,6 +7750,8 @@ driver::set_up_specs () const
+@@ -7681,6 +7772,8 @@ driver::set_up_specs () const
  			   accel_dir_suffix, dir_separator_str, NULL);
    just_machine_suffix = concat (spec_machine, dir_separator_str, NULL);
  
@@ -512,7 +502,7 @@ Index: b/src/gcc/gcc.c
    specs_file = find_a_file (&startfile_prefixes, "specs", R_OK, true);
    /* Read the specs file unless it is a default one.  */
    if (specs_file != 0 && strcmp (specs_file, "specs"))
-@@ -8355,7 +8448,8 @@ driver::maybe_run_linker (const char *ar
+@@ -8377,7 +8470,8 @@ driver::maybe_run_linker (const char *ar
  
    /* Run ld to link all the compiler output files.  */
  
@@ -522,7 +512,7 @@ Index: b/src/gcc/gcc.c
      {
        int tmp = execution_count;
  
-@@ -8424,7 +8518,7 @@ driver::maybe_run_linker (const char *ar
+@@ -8446,7 +8540,7 @@ driver::maybe_run_linker (const char *ar
    /* If options said don't run linker,
       complain about input files to be given to the linker.  */
  
@@ -531,7 +521,7 @@ Index: b/src/gcc/gcc.c
      for (i = 0; (int) i < n_infiles; i++)
        if (explicit_link_files[i]
  	  && !(infiles[i].language && infiles[i].language[0] == '*'))
-@@ -9771,9 +9865,9 @@ static unsigned HOST_WIDE_INT
+@@ -9793,9 +9887,9 @@ static unsigned HOST_WIDE_INT
  get_random_number (void)
  {
    unsigned HOST_WIDE_INT ret = 0;
@@ -543,7 +533,7 @@ Index: b/src/gcc/gcc.c
    if (fd >= 0)
      {
        read (fd, &ret, sizeof (HOST_WIDE_INT));
-@@ -10133,16 +10227,16 @@ find_fortran_preinclude_file (int argc,
+@@ -10155,16 +10249,16 @@ find_fortran_preinclude_file (int argc,
  }
  
  
@@ -564,8 +554,6 @@ Index: b/src/gcc/gcc.c
     to '\\' + ' ' and '\t' to '\\' + '\t'.  For example:
     "a b"  -> "a\\ b"
     "a  b" -> "a\\ \\ b"
-Index: b/src/gcc/gcc.h
-===================================================================
 --- a/src/gcc/gcc.h
 +++ b/src/gcc/gcc.h
 @@ -73,9 +73,17 @@ struct spec_function
@@ -595,8 +583,6 @@ Index: b/src/gcc/gcc.h
 +extern int allow_linker;
 +
  #endif /* ! GCC_GCC_H */
-Index: b/src/Makefile.def
-===================================================================
 --- a/src/Makefile.def
 +++ b/src/Makefile.def
 @@ -10,12 +10,12 @@ AutoGen definitions Makefile.tpl;
@@ -693,8 +679,6 @@ Index: b/src/Makefile.def
  languages = { language=brig;	gcc-check-target=check-brig;
  				lib-check-target=check-target-libhsail-rt; };
  languages = { language=d;	gcc-check-target=check-d;
-Index: b/src/Makefile.in
-===================================================================
 --- a/src/Makefile.in
 +++ b/src/Makefile.in
 @@ -10,12 +10,12 @@
@@ -1499,8 +1483,6 @@ Index: b/src/Makefile.in
  # build configures are similar.
  @serialization_dependencies@
  
-Index: b/src/Makefile.tpl
-===================================================================
 --- a/src/Makefile.tpl
 +++ b/src/Makefile.tpl
 @@ -13,12 +13,12 @@ in
@@ -1632,8 +1614,6 @@ Index: b/src/Makefile.tpl
  # build configures are similar.
  @serialization_dependencies@
  
-Index: b/src/gcc/brig/brigspec.c
-===================================================================
 --- a/src/gcc/brig/brigspec.c
 +++ b/src/gcc/brig/brigspec.c
 @@ -134,3 +134,9 @@ int lang_specific_pre_link (void) /* Not
@@ -1646,8 +1626,6 @@ Index: b/src/gcc/brig/brigspec.c
 +lang_register_spec_functions (void)
 +{
 +}
-Index: b/src/gcc/d/d-spec.cc
-===================================================================
 --- a/src/gcc/d/d-spec.cc
 +++ b/src/gcc/d/d-spec.cc
 @@ -514,3 +514,8 @@ lang_specific_pre_link (void)
@@ -1659,8 +1637,6 @@ Index: b/src/gcc/d/d-spec.cc
 +lang_register_spec_functions (void)
 +{
 +}
-Index: b/src/gcc/fortran/gfortranspec.c
-===================================================================
 --- a/src/gcc/fortran/gfortranspec.c
 +++ b/src/gcc/fortran/gfortranspec.c
 @@ -200,7 +200,7 @@ lang_specific_driver (struct cl_decoded_
@@ -1682,8 +1658,6 @@ Index: b/src/gcc/fortran/gfortranspec.c
 +lang_register_spec_functions (void)
 +{
 +}
-Index: b/src/gcc/go/gospec.c
-===================================================================
 --- a/src/gcc/go/gospec.c
 +++ b/src/gcc/go/gospec.c
 @@ -125,7 +125,7 @@ lang_specific_driver (struct cl_decoded_
