@@ -12,7 +12,7 @@
  # Check for thread headers.
 --- a/src/gcc/config.in
 +++ b/src/gcc/config.in
-@@ -1765,6 +1765,12 @@
+@@ -1772,6 +1772,12 @@
  #endif
  
  
