@@ -9,6 +9,7 @@ gcc-9 (9.3.0-17) UNRELEASED; urgency=medium
       PR libstdc++/96484.
   * Apply patch for PR bootstrap/96203, add -fcf-protection=check, taken from
     the trunk.
+  * Refresh patches.
 
  -- Matthias Klose <doko@debian.org>  Sat, 08 Aug 2020 13:14:38 +0200
 
